@@ -1,6 +1,5 @@
 Upgrade all of the installed packages.
 $ wajig upgrade
 options:
-  -b            backup packages about to be upgraded onto some default directory
-  --backup=DIR  backup packages about to be upgraded onto a given directory
+  -b --backup   backup packages about to be upgraded onto some default directory
   -n --noauth   skip the authentication verification prompt before the upgrade
