@@ -340,7 +340,7 @@ def get_dependencies(pkg):
     return dp
 
 
-def backup_before_upgrade(bkdir, pkgs, distupgrade=False):
+def backup_before_upgrade(pkgs, distupgrade=False):
     """Backup packages before a (dist)upgrade.
 
      This optional functionality helps recovery in case of trouble caused
@@ -348,18 +348,11 @@ def backup_before_upgrade(bkdir, pkgs, distupgrade=False):
      in a directory named like  ~/.wajig/hostname/backups/2010-09-21_09h21."""
 
     date = time.strftime("%Y-%m-%d_%Hh%M", time.localtime())
-    if isinstance(bkdir, str):
-        target = os.path.abspath(bkdir + "/" + date)
-        try:
-            os.makedirs(target)
-        except Exception as e:
-            print("Quitting:", e)
-    else:
-        target = init_dir + "/backups/" + date
-        try:
-            os.makedirs(target)
-        except:
-            pass  # ignore the 'file already exists' exception and proceed
+    target = init_dir + "/backups/" + date
+    try:
+        os.makedirs(target)
+    except:
+        pass  # ignore the 'file already exists' exception and proceed
     os.chdir(target)
     print("JIG: The packages will saved in", target)
     for pkg in pkgs:
